Fix kbps to mbps conversion when attaching client hints

When downlink client hint is attached to the request during main
frame navigation, convert kbps to Mbps correctly.

Change-Id: If0b12bb2eb0acc85ed64d349ca0e28f2c6a0b025
Bug: 838364
Reviewed-on: https://chromium-review.googlesource.com/1036190
Commit-Queue: Tarun Bansal <tbansal@chromium.org>
Reviewed-by: Ryan Sturm <ryansturm@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555127}
Former-commit-id: ceab959433805c5e314680e3e6a70d054698dc28