chrome/browser/client_hints/client_hints_unittest.cc
@@ -40,31 +40,32 @@ TEST_F(ClientHintsTest, RttRoundedOff) {
 }
 
 TEST_F(ClientHintsTest, DownlinkRoundedOff) {
-  EXPECT_GE(1, static_cast<int>(client_hints::internal::RoundMbps("", 0.1023) *
-                                1000) %
+  EXPECT_GE(1, static_cast<int>(
+                   client_hints::internal::RoundKbpsToMbps("", 102) * 1000) %
                    50);
-  EXPECT_GE(
-      1, static_cast<int>(client_hints::internal::RoundMbps("", 0.012) * 1000) %
-             50);
-  EXPECT_GE(1, static_cast<int>(client_hints::internal::RoundMbps("", 2.1023) *
-                                1000) %
+  EXPECT_GE(1, static_cast<int>(
+                   client_hints::internal::RoundKbpsToMbps("", 12) * 1000) %
+                   50);
+  EXPECT_GE(1, static_cast<int>(
+                   client_hints::internal::RoundKbpsToMbps("", 2102) * 1000) %
                    50);
 
   EXPECT_GE(
-      1, static_cast<int>(client_hints::internal::RoundMbps("foo.com", 0.1023) *
-                          1000) %
-             50);
-  EXPECT_GE(1, static_cast<int>(
-                   client_hints::internal::RoundMbps("foo.com", 0.012) * 1000) %
-                   50);
-  EXPECT_GE(
-      1, static_cast<int>(client_hints::internal::RoundMbps("foo.com", 2.1023) *
-                          1000) %
+      1, static_cast<int>(
+             client_hints::internal::RoundKbpsToMbps("foo.com", 102) * 1000) %
              50);
   EXPECT_GE(1,
             static_cast<int>(
-                client_hints::internal::RoundMbps("foo.com", 12.1023) * 1000) %
+                client_hints::internal::RoundKbpsToMbps("foo.com", 12) * 1000) %
                 50);
+  EXPECT_GE(
+      1, static_cast<int>(
+             client_hints::internal::RoundKbpsToMbps("foo.com", 2102) * 1000) %
+             50);
+  EXPECT_GE(
+      1, static_cast<int>(
+             client_hints::internal::RoundKbpsToMbps("foo.com", 12102) * 1000) %
+             50);
 }
 
 // Verify that the value of RTT after adding noise is within approximately 10%
@@ -97,11 +98,11 @@ TEST_F(ClientHintsTest, FinalRttWithin10PercentValue) {
 // rounding off. To handle that, the maximum absolute difference allowed is set
 // to a value slightly larger than 10% of the original metric value.
 TEST_F(ClientHintsTest, FinalDownlinkWithin10PercentValue) {
-  EXPECT_NEAR(0.098, client_hints::internal::RoundMbps("", 0.098), 0.1);
-  EXPECT_NEAR(1.023, client_hints::internal::RoundMbps("", 1.023), 0.2);
-  EXPECT_NEAR(1.193, client_hints::internal::RoundMbps("", 1.193), 0.2);
-  EXPECT_NEAR(7.523, client_hints::internal::RoundMbps("", 7.523), 0.9);
-  EXPECT_NEAR(9.999, client_hints::internal::RoundMbps("", 9.999), 1.2);
+  EXPECT_NEAR(0.098, client_hints::internal::RoundKbpsToMbps("", 98), 0.1);
+  EXPECT_NEAR(1.023, client_hints::internal::RoundKbpsToMbps("", 1023), 0.2);
+  EXPECT_NEAR(1.193, client_hints::internal::RoundKbpsToMbps("", 1193), 0.2);
+  EXPECT_NEAR(7.523, client_hints::internal::RoundKbpsToMbps("", 7523), 0.9);
+  EXPECT_NEAR(9.999, client_hints::internal::RoundKbpsToMbps("", 9999), 1.2);
 }
 
 TEST_F(ClientHintsTest, RttMaxValue) {
@@ -123,17 +124,17 @@ TEST_F(ClientHintsTest, RttMaxValue) {
 }
 
 TEST_F(ClientHintsTest, DownlinkMaxValue) {
-  EXPECT_GE(10.0, client_hints::internal::RoundMbps("", 0.1023));
-  EXPECT_GE(10.0, client_hints::internal::RoundMbps("", 2.1023));
-  EXPECT_GE(10.0, client_hints::internal::RoundMbps("", 100.1023));
-  EXPECT_GE(1, static_cast<int>(client_hints::internal::RoundMbps("", 0.1023) *
-                                1000) %
-                   50);
-  EXPECT_GE(1, static_cast<int>(client_hints::internal::RoundMbps("", 2.1023) *
-                                1000) %
+  EXPECT_GE(10.0, client_hints::internal::RoundKbpsToMbps("", 102));
+  EXPECT_GE(10.0, client_hints::internal::RoundKbpsToMbps("", 2102));
+  EXPECT_GE(10.0, client_hints::internal::RoundKbpsToMbps("", 100102));
+  EXPECT_GE(1, static_cast<int>(
+                   client_hints::internal::RoundKbpsToMbps("", 102) * 1000) %
                    50);
   EXPECT_GE(1, static_cast<int>(
-                   client_hints::internal::RoundMbps("", 100.1023) * 1000) %
+                   client_hints::internal::RoundKbpsToMbps("", 2102) * 1000) %
+                   50);
+  EXPECT_GE(1, static_cast<int>(
+                   client_hints::internal::RoundKbpsToMbps("", 100102) * 1000) %
                    50);
 }
 
@@ -164,13 +165,14 @@ TEST_F(ClientHintsTest, RttRandomized) {
 
 TEST_F(ClientHintsTest, DownlinkRandomized) {
   const int initial_value =
-      client_hints::internal::RoundMbps("example.com", 1.023);
+      client_hints::internal::RoundKbpsToMbps("example.com", 1023);
   bool network_quality_randomized_by_host = false;
   // There is a 1/20 chance that the same random noise is selected for two
   // different hosts. Run this test across 20 hosts to reduce the chances of
   // test failing to (1/20)^20.
   for (size_t i = 0; i < 20; ++i) {
-    int value = client_hints::internal::RoundMbps(base::IntToString(i), 1.023);
+    int value =
+        client_hints::internal::RoundKbpsToMbps(base::IntToString(i), 1023);
     // If |value| is different than |initial_value|, it implies that downlink is
     // randomized by host. This verifies the behavior, and test can be ended.
     if (value != initial_value)
@@ -180,7 +182,7 @@ TEST_F(ClientHintsTest, DownlinkRandomized) {
 
   // Calling RoundMbps for same host should return the same result.
   for (size_t i = 0; i < 20; ++i) {
-    int value = client_hints::internal::RoundMbps("example.com", 1.023);
+    int value = client_hints::internal::RoundKbpsToMbps("example.com", 1023);
     EXPECT_EQ(initial_value, value);
   }
 }
